--- a/index.html
+++ b/index.html
@@ -7,18 +7,34 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style/style.css">
 
 </head>
 <body>
   <div class="container">
-    <p class="quote">
-      “ I’ve been interested in coding for a while but never taken the jump, until now. 
-      I couldn’t recommend this course enough. I’m now in the job of my dreams and so 
-      excited about the future. ”
-    </p>
-    <p class="by">Tanya Sinclair</p>
-    <p class="job">UX Engineer</p>
+    <div class="box-quote">
+      <div class="text">
+        <p class="quote">
+          “ I’ve been interested in coding for a while but never taken the jump, until now. 
+          I couldn’t recommend this course enough. I’m now in the job of my dreams and so 
+          excited about the future. ”
+        </p>
+        <p class="by">Tanya Sinclair <span>UX Engineer</span></p>
+        
+      </div>  
+    </div>
+    <div class="box-photo">
+      <img src="./images/image-tanya.jpg" alt="">
+      <div class="box-button">
+        <button class="prev"><img src="./images/icon-prev.svg" alt="icone prev"></button>
+        <button class="next"><img src="./images/icon-next.svg" alt="icone next"></button>
+      </div>
+    </div>
   </div>
+  
   
 
   
