--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-  <div class="container">
+  <div class="slider slider1">
     <div class="box-quote">
       <div class="text">
         <p class="quote">
@@ -27,7 +27,26 @@
       </div>  
     </div>
     <div class="box-photo">
-      <img src="./images/image-tanya.jpg" alt="">
+      <img class="photo" src="./images/image-tanya.jpg" alt="">
+      <div class="box-button">
+        <button class="prev"><img src="./images/icon-prev.svg" alt="icone prev"></button>
+        <button class="next"><img src="./images/icon-next.svg" alt="icone next"></button>
+      </div>
+    </div>
+  </div>
+
+  <div class="slider slider2 hide">
+    <div class="box-quote">
+      <div class="text">
+        <p class="quote">
+          “ If you want to lay the best foundation possible I’d recommend taking this course. The depth the instructors go into is incredible. I now feel so confident about starting up as a professional developer. ”
+        </p>
+        <p class="by">John Tarkpor <span>Junior Front-end Developer</span></p>
+        
+      </div>  
+    </div>
+    <div class="box-photo">
+      <img class="photo" src="./images/image-john.jpg" alt="">
       <div class="box-button">
         <button class="prev"><img src="./images/icon-prev.svg" alt="icone prev"></button>
         <button class="next"><img src="./images/icon-next.svg" alt="icone next"></button>
@@ -35,16 +54,7 @@
     </div>
   </div>
   
-  
 
-  
-  
-<p>“ If you want to lay the best foundation possible I’d recommend taking this course. 
-  The depth the instructors go into is incredible. I now feel so confident about 
-  starting up as a professional developer. ”</p>
-<p>John Tarkpor</p>
-<p>Junior Front-end Developer</p>
-  
 
   
   
@@ -53,5 +63,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
